--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 appId: '489478338111015',
                 autoLogAppEvents: true,
                 xfbml: false,
-                version: 'v2.10'
+                version: 'v2.10',
+                status: true
             });
             FB.AppEvents.logPageView();
         };
@@ -35,7 +36,6 @@
             js.src = "//connect.facebook.net/en_GB/sdk.js";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-
     </script>
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -43,6 +43,40 @@
 
     <!-- Add your site or application content here -->
     <p>List Facebook Reviews.</p>
+    <button onclick="myFacebookLogin()">Login with Facebook</button>
+    <p id="loginStatus"></p>
+    <ol>
+    </ol>
+
+    <script>
+        // Only works after `FB.init` is called
+        function myFacebookLogin() {
+            FB.login(function () { }, { scope: 'manage_pages' });
+        }
+
+        function setLoginStatus() {
+            FB.getLoginStatus(function (response) {
+                var statusElement = document.getElementById('loginStatus');
+                if (response.status === 'connected') {
+                    // the user is logged in and has authenticated your
+                    // app, and response.authResponse supplies
+                    // the user's ID, a valid access token, a signed
+                    // request, and the time the access token
+                    // and signed request each expire
+                    var uid = response.authResponse.userID;
+                    var accessToken = response.authResponse.accessToken;
+                    statusElement.innerHTML = 'logged in to Facebook';
+                } else if (response.status === 'not_authorized') {
+                    // the user is logged in to Facebook,
+                    // but has not authenticated your app
+                    statusElement.innerHTML = 'app not authorised';
+                } else {
+                    // the user isn't logged in to Facebook.
+                    statusElement.innerHTML = 'not logged in to facebook';
+                }
+            });
+        }
+    </script>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
@@ -53,13 +87,13 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-            (function (b, o, i, l, e, r) {            
-b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+            (function (b, o, i, l, e, r) {
+                b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                    function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
                 e = o.createElement(i); r = o.getElementsByTagName(i)[0];
                 e.src = 'https://www.google-analytics.com/analytics.js';
-                r.parentNode.insertBefore(e, r)            
-}(window, document, 'script', 'ga'));
+                r.parentNode.insertBefore(e, r)
+            }(window, document, 'script', 'ga'));
         ga('create', 'UA-XXXXX-X', 'auto'); ga('send', 'pageview');
     </script>
 </body>
